// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders components/popover/demo/arrow.tsx correctly 1`] = `
Array [
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-var-test-id"
    role="radiogroup"
    style="margin-bottom:24px"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Show"
        >
          Show
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Hide"
        >
          Hide
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Center"
        >
          Center
        </div>
      </label>
    </div>
  </div>,
  <div
    class="demo ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center"
      style="white-space:nowrap"
    >
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          TL
        </span>
      </button>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Top
        </span>
      </button>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          TR
        </span>
      </button>
    </div>
    <div
      class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-space-between"
      style="width:432px"
    >
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-vertical"
      >
        <button
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:80px;margin:4px"
          type="button"
        >
          <span>
            LT
          </span>
        </button>
        <button
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:80px;margin:4px"
          type="button"
        >
          <span>
            Left
          </span>
        </button>
        <button
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:80px;margin:4px"
          type="button"
        >
          <span>
            LB
          </span>
        </button>
      </div>
      <div
        class="ant-flex css-var-test-id ant-flex-align-center ant-flex-vertical"
      >
        <button
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:80px;margin:4px"
          type="button"
        >
          <span>
            RT
          </span>
        </button>
        <button
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:80px;margin:4px"
          type="button"
        >
          <span>
            Right
          </span>
        </button>
        <button
          class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
          style="width:80px;margin:4px"
          type="button"
        >
          <span>
            RB
          </span>
        </button>
      </div>
    </div>
    <div
      class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center"
      style="white-space:nowrap"
    >
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          BL
        </span>
      </button>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Bottom
        </span>
      </button>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          BR
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/basic.tsx correctly 1`] = `
<button
  class="ant-btn css-var-test-id ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
  type="button"
>
  <span>
    Hover me
  </span>
</button>
`;

exports[`renders components/popover/demo/component-token.tsx correctly 1`] = `
Array [
  <div
    class="ant-popover ant-popover-pure ant-popover-placement-top css-var-test-id"
  >
    <div
      class="ant-popover-arrow"
    />
    <div
      class="ant-popover-container"
      role="tooltip"
    >
      <div
        class="ant-popover-title"
      >
        Title
      </div>
      <div
        class="ant-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-popover ant-popover-pure ant-popover-placement-bottomLeft css-var-test-id"
    style="width:250px"
  >
    <div
      class="ant-popover-arrow"
    />
    <div
      class="ant-popover-container"
      role="tooltip"
      style="width:250px"
    >
      <div
        class="ant-popover-title"
      >
        Title
      </div>
      <div
        class="ant-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/control.tsx correctly 1`] = `
<button
  class="ant-btn css-var-test-id ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders components/popover/demo/hover-with-click.tsx correctly 1`] = `
<button
  class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
  type="button"
>
  <span>
    Hover and click
  </span>
</button>
`;

exports[`renders components/popover/demo/placement.tsx correctly 1`] = `
<div
  class="demo ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
>
  <div
    class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center"
    style="white-space:nowrap"
  >
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
  </div>
  <div
    class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-space-between"
    style="width:432px"
  >
    <div
      class="ant-flex css-var-test-id ant-flex-align-center ant-flex-vertical"
    >
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
    </div>
    <div
      class="ant-flex css-var-test-id ant-flex-align-center ant-flex-vertical"
    >
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
      <button
        class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
        style="width:80px;margin:4px"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-flex css-var-test-id ant-flex-align-center ant-flex-justify-center"
    style="white-space:nowrap"
  >
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      style="width:80px;margin:4px"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/popover/demo/render-panel.tsx correctly 1`] = `
Array [
  <div
    class="ant-popover ant-popover-pure ant-popover-placement-top css-var-test-id"
  >
    <div
      class="ant-popover-arrow"
    />
    <div
      class="ant-popover-container"
      role="tooltip"
    >
      <div
        class="ant-popover-title"
      >
        Title
      </div>
      <div
        class="ant-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-popover ant-popover-pure ant-popover-placement-bottomLeft css-var-test-id"
    style="width:250px"
  >
    <div
      class="ant-popover-arrow"
    />
    <div
      class="ant-popover-container"
      role="tooltip"
      style="width:250px"
    >
      <div
        class="ant-popover-title"
      >
        Title
      </div>
      <div
        class="ant-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/style-class.tsx correctly 1`] = `
<div
  class="ant-flex css-var-test-id ant-flex-gap-medium"
>
  <button
    class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    type="button"
  >
    <span>
      Object Style
    </span>
  </button>
  <button
    class="ant-btn css-var-test-id ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
    type="button"
  >
    <span>
      Function Style
    </span>
  </button>
</div>
`;

exports[`renders components/popover/demo/triggerType.tsx correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-test-id"
  style="flex-wrap:wrap"
>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Hover me
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Focus me
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Click me
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/popover/demo/wireframe.tsx correctly 1`] = `
Array [
  <div
    class="ant-popover ant-popover-pure ant-popover-placement-top css-var-test-id"
  >
    <div
      class="ant-popover-arrow"
    />
    <div
      class="ant-popover-container"
      role="tooltip"
    >
      <div
        class="ant-popover-title"
      >
        Title
      </div>
      <div
        class="ant-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-popover ant-popover-pure ant-popover-placement-bottomLeft css-var-test-id"
    style="width:250px"
  >
    <div
      class="ant-popover-arrow"
    />
    <div
      class="ant-popover-container"
      role="tooltip"
      style="width:250px"
    >
      <div
        class="ant-popover-title"
      >
        Title
      </div>
      <div
        class="ant-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;
